docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-40-52.ceg/compilation.txt
Universidad.java:36: error: cannot find symbol
        this.materias[ContadorMaterias++]=materia;
                      ^
  symbol:   variable ContadorMaterias
  location: class Universidad
1 error
Not compiled
